--- a/index.html
+++ b/index.html
@@ -728,15 +728,15 @@ Total Net Weight: 5 tons
         </div>
       </div>
 
-      <!-- Build Card 4: Premium Finishes -->
+      <!-- Build Card 4: International Shipping -->
       <div class="build-card reverse">
         <div class="build-image">
-          <img src="images/fullpackage4.png" alt="The Full Package: Premium Finishes">
+          <img src="images/fullpackage4.png" alt="The Full Package: International Shipping">
         </div>
         <div class="build-description">
-          <h3>Premium Finishes</h3>
+          <h3>International Shipping</h3>
           <p>
-            Experience unparalleled craftsmanship and luxurious details that transform every space. Our premium finishes bring a sophisticated touch that exudes quality and exclusivity.
+            We provide comprehensive international shipping solutions to clients worldwide. Our experienced logistics team ensures secure, efficient delivery of your capsule home to any global destination. With established shipping routes and trusted partners, we handle all customs requirements and documentation to make your international purchase seamless.
           </p>
         </div>
       </div>
