--- a/portfolio.html
+++ b/portfolio.html
@@ -120,9 +120,9 @@
   <!-- Portfolio Content -->
   <section id="portfolio" class="container section">
     <!-- Series Groups in Alphabetical Order -->
-    <!-- A Series -->
-    <div class="series-group">
-      <h2 class="series-title">A Series</h2>
+    <!-- Astral Series (formerly A Series) -->
+    <div class="series-group astral-series">
+      <h2 class="series-title">Astral Series</h2>
       <div class="stock">
         <!-- A30 -->
         <div class="stock-item">
@@ -175,9 +175,9 @@ Total Net Weight: 6 tons
       </div>
     </div>
 
-    <!-- G Series -->
-    <div class="series-group">
-      <h2 class="series-title">G Series</h2>
+    <!-- Galaxy Series (formerly G Series) -->
+    <div class="series-group galaxy-series">
+      <h2 class="series-title">Galaxy Series</h2>
       <div class="stock">
         <!-- G30 -->
         <div class="stock-item">
@@ -262,9 +262,9 @@ Total Net Weight: 6 tons
       </div>
     </div>
 
-    <!-- L Series -->
-    <div class="series-group">
-      <h2 class="series-title">L Series</h2>
+    <!-- Lunar Series (formerly L Series) -->
+    <div class="series-group lunar-series">
+      <h2 class="series-title">Lunar Series</h2>
       <div class="stock">
         <!-- L50 -->
         <div class="stock-item">
@@ -317,9 +317,9 @@ Total Net Weight: 5 tons
       </div>
     </div>
 
-    <!-- M Series -->
-    <div class="series-group">
-      <h2 class="series-title">M Series</h2>
+    <!-- Meteor Series (formerly M Series) -->
+    <div class="series-group meteor-series">
+      <h2 class="series-title">Meteor Series</h2>
       <div class="stock">
         <!-- M50 -->
         <div class="stock-item">
@@ -356,41 +356,24 @@ Total Net Weight: 5 tons
       </div>
     </div>
 
-    <!-- U Series -->
-    <div class="series-group">
-      <h2 class="series-title">U Series</h2>
+    <!-- Universe Series (formerly U Series) - Now with single Round Universe model -->
+    <div class="series-group universe-series">
+      <h2 class="series-title">Universe Series</h2>
       <div class="stock">
-        <!-- U30 -->
+        <!-- Round Universe (replacing U30 and U50) -->
         <div class="stock-item">
-          <img class="model-img" src="images/U30.png" alt="U30">
-          <h3>U30</h3>
+          <img class="model-img" src="images/RoundUniverse.png" alt="Round Universe">
+          <h3>Round Universe</h3>
           <pre class="model-description">
-Building area: 29.9㎡
-Length: 8.3m
-Width: 3.6m
+Building area: 33.0㎡
+Diameter: 6.5m
 Height: 3.2m
-Occupancy: 2 people
-Maximum Power: 8KW (with floor heating)
-Total Net Weight: 4 tons
-          </pre>
-          <div class="price-box">Price: US$18,874</div>
-          <a href="product.html?model=U30" class="view-more-btn futuristic">View More</a>
-        </div>
-        <!-- U50 -->
-        <div class="stock-item">
-          <img class="model-img" src="images/U50.png" alt="U50">
-          <h3>U50</h3>
-          <pre class="model-description">
-Building area: 33.1㎡
-Length: 9.5m
-Width: 3.6m
-Height: 3.2m
-Occupancy: 2 people
+Occupancy: 2-4 people
 Maximum Power: 10KW (with floor heating)
 Total Net Weight: 5 tons
           </pre>
-          <div class="price-box">Price: US$22,538</div>
-          <a href="product.html?model=U50" class="view-more-btn futuristic">View More</a>
+          <div class="price-box">Price: US$24,500</div>
+          <a href="product.html?model=RoundUniverse" class="view-more-btn futuristic">View More</a>
         </div>
       </div>
     </div>
