--- a/index.html
+++ b/index.html
@@ -695,8 +695,8 @@ Total Net Weight: 5 tons
         <div class="stock">
           <!-- Round Universe (replacing U30 and U50) -->
           <div class="stock-item">
-            <img class="model-img" src="images/RoundUniverse.png" alt="Round Universe">
-            <h3>Round Universe</h3>
+            <img class="model-img" src="images/RoundUniverse.png" alt="U">
+            <h3>U</h3>
             <pre class="model-description">
 Building area: 33.0㎡
 Diameter: 6.5m | Height: 3.2m
@@ -705,7 +705,7 @@ Maximum Power: 10KW (with floor heating)
 Total Net Weight: 5 tons
             </pre>
             <div class="price-box">Price: US$24,500</div>
-            <a href="product.html?model=RoundUniverse" class="view-more-btn futuristic">View More</a>
+            <a href="product.html?model=U" class="view-more-btn futuristic">View More</a>
           </div>
         </div>
       </div>
@@ -859,8 +859,8 @@ Total Net Weight: 5 tons
             <span>M70</span>
           </label>
           <label class="model-option">
-            <input type="checkbox" name="selectedModels[]" value="RoundUniverse">
-            <span>Round Universe</span>
+            <input type="checkbox" name="selectedModels[]" value="U">
+            <span>U</span>
           </label>
         </div>
         <div id="selectedModelsTab" style="margin-top: 5px; padding: 5px; border: 1px dashed #000000; border-radius: 4px;">
