--- a/portfolio.html
+++ b/portfolio.html
@@ -362,7 +362,7 @@ Total Net Weight: 5 tons
       <div class="stock">
         <!-- Round Universe (replacing U30 and U50) -->
         <div class="stock-item">
-          <img class="model-img" src="images/RoundUniverse.png" alt="U">
+          <img class="model-img" src="images/U.png" alt="U">
           <h3>U</h3>
           <pre class="model-description">
 Building area: 33.0㎡
