--- a/product.html
+++ b/product.html
@@ -305,32 +305,28 @@
         <legend>Additional Configuration:</legend>
         <input type="hidden" name="configurations" id="configurationsInput">
         <div id="configSelectionContainer">
-          <!-- Kitchen Options -->
           <label class="config-box">
             <input type="checkbox" name="additionalConfig[]" value="Kitchen">
             <div class="config-content">
               <span class="config-title">Kitchen</span>
             </div>
           </label>
-          <!-- Lounge Options -->
           <label class="config-box">
             <input type="checkbox" name="additionalConfig[]" value="Lounge">
             <div class="config-content">
               <span class="config-title">Lounge</span>
             </div>
           </label>
-          <!-- Dining Room Options -->
           <label class="config-box">
             <input type="checkbox" name="additionalConfig[]" value="Dining Room">
             <div class="config-content">
-              <span class="config-title">Dining Room</span>
+              <span class="config-title">Dining</span>
             </div>
           </label>
-          <!-- Projector Screen Options -->
           <label class="config-box">
-            <input type="checkbox" name="additionalConfig[]" value="Projector Screen">
+            <input type="checkbox" name="additionalConfig[]" value="Projector Cinema">
             <div class="config-content">
-              <span class="config-title">Projector Screen</span>
+              <span class="config-title">Cinema</span>
             </div>
           </label>
         </div>
